@startuml
class AdressDTO {
}
class FindAdressesWrapper <<partial>> {
    + FindAdressesWrapper(dto:CommandDTO)
    + {static} IsForMe(dto:CommandDTO) : bool
    + {static} ExecuteCommand(dto:CommandDTO) : CommandDTO
    + <<partial>> FindAdresses(searchText:String) : List<AdressDTO>
}
class GetAdressWrapper <<partial>> {
    + GetAdressWrapper(dto:CommandDTO)
    + {static} IsForMe(dto:CommandDTO) : bool
    + {static} ExecuteCommand(dto:CommandDTO) : CommandDTO
    + <<partial>> GetAdress(id:Guid) : AdressDTO
}
class SetAdressWrapper <<partial>> {
    + SetAdressWrapper(dto:CommandDTO)
    + {static} IsForMe(dto:CommandDTO) : bool
    + {static} ExecuteCommand(dto:CommandDTO) : CommandDTO
    + <<partial>> SetAdress(id:Guid, adress:AdressDTO) : AdressDTO
}
class DeleteAdressWrapper <<partial>> {
    + DeleteAdressWrapper(dto:CommandDTO)
    + {static} IsForMe(dto:CommandDTO) : bool
    + {static} ExecuteCommand(dto:CommandDTO) : CommandDTO
    + <<partial>> DeleteAdress(id:Guid) : AdressDTO
}
class AdressTypes <<static>> <<partial>> {
    + {static} Dispatch(dto:CommandDTO) : CommandDTO
}
class AdressTypes <<static>> <<partial>> {
    + {static} GetTypes(commandTypes:List<CommandTypeDTO>) : void
}
class "List`1"<T> {
}
BaseDTO <|-- AdressDTO
AdressDTO --> "TypeId" Guid
AdressDTO --> "Name1" String
AdressDTO --> "Name2" String
AdressDTO --> "Adress1" String
AdressDTO --> "Adress2" String
AdressDTO --> "Housenumber" String
AdressDTO --> "City" String
AdressDTO --> "Postcode" String
CommandWrapper <|-- FindAdressesWrapper
FindAdressesWrapper --> "TypeId" Guid
FindAdressesWrapper --> "Cmd" CommandDTO
FindAdressesWrapper --> "SearchText" String
FindAdressesWrapper --> "Result<AdressDTO>" "List`1"
CommandWrapper <|-- GetAdressWrapper
GetAdressWrapper --> "TypeId" Guid
GetAdressWrapper --> "Cmd" CommandDTO
GetAdressWrapper --> "Id" Guid
GetAdressWrapper --> "Result" AdressDTO
CommandWrapper <|-- SetAdressWrapper
SetAdressWrapper --> "TypeId" Guid
SetAdressWrapper --> "Cmd" CommandDTO
SetAdressWrapper --> "Id" Guid
SetAdressWrapper --> "Adress" AdressDTO
SetAdressWrapper --> "Result" AdressDTO
CommandWrapper <|-- DeleteAdressWrapper
DeleteAdressWrapper --> "TypeId" Guid
DeleteAdressWrapper --> "Cmd" CommandDTO
DeleteAdressWrapper --> "Id" Guid
DeleteAdressWrapper --> "Result" AdressDTO
@enduml
